--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 __pycache__
 examples/MERRA2_wind/MERRA2*
-examples/HYCOM_currents/*.nc
 examples/outputfiles/*tmp
 examples/outputfiles/*.nc
 examples/sourcefiles/*.nc
+examples/HYCOM_currents
 .DS_Store
 .idea
