--- a/environment.yml
+++ b/environment.yml
@@ -16,5 +16,6 @@ dependencies:
   - cartopy
   - tqdm
   - ecco_v4_py
+  - docrep=0.2.7  # fixes bug importing ecco_v4_py
   - pytest
 prefix: /opt/miniconda3/envs/ADVECTOR
