--- a/environment.yml
+++ b/environment.yml
@@ -4,6 +4,7 @@ channels:
   - defaults
 dependencies:
   - python>=3.8
+  - wget
   - numpy
   - pandas
   - xarray
@@ -15,5 +16,6 @@ dependencies:
   - cartopy
   - tqdm
   - ecco_v4_py
+  - docrep=0.2.7  # fixes bug importing ecco_v4_py
   - pytest
 prefix: /opt/miniconda3/envs/ADVECTOR
