--- a/setup.cfg
+++ b/setup.cfg
@@ -16,4 +16,18 @@ classifiers =
 package_dir =
     = .
 packages = find:
-python_requires = >=3.6
+python_requires = >=3.9
+setup_requires =
+    numpy
+    geos
+install_requires =
+    pandas
+    dask
+    xarray
+    wget
+    netcdf4
+    pyopencl
+    matplotlib
+    tqdm
+    ecco_v4_py
+    pytest
