setting up examples to run via pip install.  Changing around data downloaders, no longer assumed location for example data.

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,15 +13,15 @@ classifiers =
     Operating System :: OS Independent
 
 [options]
+include_package_data = True
 package_dir =
     = .
 packages = find:
 python_requires = >=3.9
-setup_requires =
-    numpy
-    geos
 install_requires =
+    numpy
     pandas
+    scipy
     dask
     xarray
     wget
@@ -31,3 +31,6 @@ install_requires =
     tqdm
     ecco_v4_py
     pytest
+
+[options.package_data]
+* = *.cl, *.h
