--- a/.github/workflows/auto_black.yml
+++ b/.github/workflows/auto_black.yml
@@ -6,5 +6,6 @@ jobs:
     steps:
       - name: Black Code Formatter
         uses: lgeiger/black-action@v1.0.1
-	args: . --check
+	with:
+	  args: . --check
 
