made the example scripts accessible through the pip installation, updated documentation

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,4 +32,10 @@ install_requires =
     pytest
 
 [options.package_data]
-* = *.cl, *.h
+* = *.cl, *.h, *.nc
+
+[options.entry_points]
+console_scripts =
+    ADVECTOR_examples_2D = ADVECTOR.examples.ECCO_advect_2D:main
+    ADVECTOR_examples_3D = ADVECTOR.examples.ECCO_advect_3D:main
+    ADVECTOR_download_sample_data = ADVECTOR.examples.download_example_data:main
