streamlined versioning; cleaned up example runners

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = ADVECTOR
-version = 1.0.0
+version = attr: ADVECTOR._version.__version__
 author = Doug Klink
 author_email = dougdklink3@gmail.com
 description = A computationally efficient and massively parallel marine litter transport model
