added license to setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,7 @@ long_description_content_type = text/markdown
 url = https://github.com/TheOceanCleanupAlgorithms/ADVECTOR
 classifiers =
     Programming Language :: Python :: 3
-    License :: none :: none
+    License :: OSI Approved :: MIT License
     Operating System :: OS Independent
 
 [options]
